tests/golden/parse_errors/compound_assignment_index_target.cd
let xs = [1];
xs[0] += 1;
